# nav2_send_goal_sample

./: CMakeLists.txt  README.md  package.xml
log/: latest_list
src/: nav2_send_goal.cpp  sample.cpp
